# staking-app

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  SMART_CONTRACT_ARCHITECTURE.md  SOLANA_STAKING_RESEARCH_2025.md  TODO.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
anchor-program/: Anchor.toml  deploy-instructions.md  package-lock.json  package.json  tsconfig.json
anchor-program/programs/zk-poop-staking/: Cargo.toml
anchor-program/programs/zk-poop-staking/src/: lib.rs  security.rs
anchor-program/tests/: zk-poop-staking.ts
scripts/: deploy-devnet.js  deploy.js  package.json
src/: App.tsx  index.css
src/components/: Community.tsx  Ecosystem.tsx  EmergencyUnlockCalculator.tsx  Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  LockPeriodSelector.tsx  Navigation.tsx  PhoneMockup.tsx  RewardsPanel.tsx  Roadmap.tsx  StakeForm.tsx  StakingInterface.tsx  WalletConnect.tsx
src/utils/: whimsy.ts
