[package]
name = "zk-poop-staking"
version = "0.1.0"
description = "ZK POOP Staking Program - Lock-based staking with $WePee rewards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_poop_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
solana-program = "2.1.0"